# catapult-db

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE.md  README.md  cobertura.xml  coverage.sh
.github/workflows/: rust-ci.yml
asm/: asm-native-512.txt  asm-native.txt  asm.txt  asm_generate.sh
bindings/: Cargo.toml  pyproject.toml
bindings/src/: graph.rs  lib.rs  vecpy.rs
ci/: Dockerfile
scripts/: buckets.py  plot_heatmaps.py  recall.py  tripclick_catapult.py
scripts/execution-logs/: catapulted-full-fastset.json  catapulted-full-hashset-noskip.json  catapulted-full-hashset-skip.json  catapulted-full-microset.json  catapulted-noskip-fastset.json  catapulted-noskip-microset.json
slides/: catapult - intro.key  one-month-report.key
slides/9jan26/: analysis.py  log-cata.txt  log-nocata.txt
src/: lib.rs  main.rs
src/candidates/: bitset.rs  candidate_entry.rs  mod.rs  ordered_float.rs  smallest_k.rs
src/candidates/set/: bitset.rs  compressed_set.rs  hashset.rs  integer_map.rs  mod.rs  page.rs  uncompressed_set.rs  visitor_set.rs
src/fs/: adjacency_load.rs  mod.rs  query_load.rs
src/indexing/: adjacency_graph.rs  filesystem.rs  graph_hierarchy.rs  mod.rs  neighbor_set.rs  node.rs
src/indexing/eviction/: catapult_neighbor_set.rs  fifo_set.rs  fixed_set.rs  mod.rs  neighbor_set.rs  neighbors.rs  unbounded_set.rs
src/indexing/hash_start/: engine_starter.rs  hasher.rs  mod.rs
src/numerics/: aligned_block.rs  f32slice.rs  mod.rs
src/search/: adjacency_graph.rs  catapult_choice.rs  graph_hierarchy.rs  mod.rs  node.rs  running_mode.rs  search_strategy.rs
src/search/graph_algo/: flat.rs  mod.rs  search_algorithm.rs
src/search/hash_start/: engine_starter.rs  hasher.rs  mod.rs  pstable_hasher.rs  zorder_index.rs
src/sets/: mod.rs
src/sets/candidates/: candidate_entry.rs  mod.rs  ordered_float.rs  smallest_k.rs
src/sets/catapults/: catapult_neighbor_set.rs  fifo_set.rs  fixed_set.rs  lru_set.rs  mod.rs  unbounded_set.rs
src/sets/fixed/: fixed_set.rs  mod.rs
src/sets/visited/: compressed_set.rs  hashset.rs  integer_map.rs  mod.rs  page.rs  uncompressed_set.rs  visitor_set.rs
src/statistics/: adversarial.rs  mod.rs  stats.rs
test_index/: ann  vectors.npy
test_index/4vecs/: 4vecs.npy  ann.data
