[package]
name = "catapult"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false

[dependencies]
itertools = "0.14.0"
rand = "0.9.2"
rand_distr = "0.5.1"
