[package]
name = "catapult"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "catapult"
path = "src/main.rs"
test = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false

# heavy optimizations but keep the debug symbols. useful for e.g. profiling & flamegraphs.
[profile.release_symbols]
inherits = "release"
debug = true
strip = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
npyz = "0.8.4"
rand = "0.9.2"
rand_distr = "0.5.1"
