[package]
name = "catapult"
version = "1.0.0-rc1"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "catapult"
path = "src/main.rs"
test = false

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false

# heavy optimizations but keep the debug symbols. useful for e.g. profiling & flamegraphs.
[profile.release_symbols]
inherits = "release"
debug = true
strip = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hashbrown = "0.16.1"
npyz = "0.8.4"
rand = "0.9.2"
rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149"}
tqdm = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
