[package]
name = "catapultpy"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "catapultpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.24.1", features = ["py-clone"]}
catapult = { path = "../"}
